[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "GenTS_interface"
version = "0.0.1"
authors = [
  { name="Jim Edwards", email="jedwards@ucar.edu" },
]
description = "CESM3 interface to the GenTS tools"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved ::  Apache License",
    "Operating System :: OS Independent",
    "Development Status :: ",
]
dependencies = [
  "GenTS",
]

[project.urls]
"Homepage" = "https://github.com/ESMCI/GenTS_interface"

[project.scripts]
gents = "cesm3_interface.gents:main"
